[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Textures/woodplanks.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level/Demo.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Page.tscn" type="PackedScene" id=6]

[sub_resource type="NavigationMesh" id=1]
vertices = PoolVector3Array( -38.6455, 3.9, -40.0804, -36.6455, 3.9, -41.0804, -36.6455, 3.9, -48.0804, -44.6455, 3.9, -48.0804, -51.6455, 3.9, -48.0804, -58.6455, 3.9, -48.0804, -65.6455, 3.9, -38.0804, -65.6455, 3.9, -27.0804, -49.6455, 3.9, -29.0804, -38.6455, 3.9, -40.0804, -58.6455, 3.9, -48.0804, -65.6455, 3.9, -48.0804, -65.6455, 3.9, -38.0804, -38.6455, 3.9, -40.0804, -44.6455, 3.9, -48.0804, -51.6455, 3.9, -48.0804, -49.6455, 3.9, -29.0804, -38.6455, 3.9, -29.0804, -38.6455, 3.9, -40.0804, -65.6455, 3.9, -27.0804, -50.6455, 3.9, -27.0804, -49.6455, 3.9, -29.0804, -29.6455, 3.9, -48.0804, -36.6455, 3.9, -48.0804, -36.6455, 3.9, -41.0804, -35.6455, 3.9, -36.0804, -5.64546, 3.9, -39.0804, -5.64546, 3.9, -48.0804, -13.6455, 3.9, -48.0804, -35.6455, 3.9, -36.0804, -35.6455, 3.9, -29.0804, -24.6455, 3.9, -29.0804, -24.6455, 3.9, -29.0804, -23.6455, 3.9, -27.0804, -5.64546, 3.9, -29.0804, -5.64546, 3.9, -39.0804, -13.6455, 3.9, -48.0804, -21.6455, 3.9, -48.0804, -21.6455, 3.9, -48.0804, -29.6455, 3.9, -48.0804, -35.6455, 3.9, -36.0804, -24.6455, 3.9, -29.0804, -5.64546, 3.9, -29.0804, -5.64546, 3.9, -39.0804, 32.3545, 3.9, -3.08041, 32.3545, 3.9, -12.0804, 30.3545, 3.9, -13.0804, 20.3545, 3.9, -3.08041, 30.3545, 3.9, -40.0804, 30.3545, 3.9, -48.0804, 21.3545, 3.9, -48.0804, -1.64546, 3.9, -28.0804, -3.64546, 3.9, -27.0804, -3.64546, 3.9, -16.0804, 10.3545, 3.9, -27.0804, 21.3545, 3.9, -48.0804, 13.3545, 3.9, -48.0804, 13.3545, 3.9, -38.0804, -2.64546, 3.9, -9.08041, -1.64546, 3.9, -2.08041, 9.35454, 3.9, -2.08041, -3.64546, 3.9, -16.0804, -2.64546, 3.9, -9.08041, 9.35454, 3.9, -2.08041, 9.35454, 3.9, -48.0804, -1.64546, 3.9, -48.0804, -1.64546, 3.9, -38.0804, 9.35454, 3.9, -37.0804, 30.3545, 3.9, -22.0804, 30.3545, 3.9, -31.0804, 13.3545, 3.9, -28.0804, 10.3545, 3.9, -27.0804, 9.35454, 3.9, -37.0804, -1.64546, 3.9, -38.0804, -1.64546, 3.9, -28.0804, 10.3545, 3.9, -27.0804, 20.3545, 3.9, -3.08041, 30.3545, 3.9, -13.0804, 30.3545, 3.9, -22.0804, 10.3545, 3.9, -27.0804, -3.64546, 3.9, -16.0804, 9.35454, 3.9, -2.08041, 30.3545, 3.9, -40.0804, 21.3545, 3.9, -48.0804, 13.3545, 3.9, -38.0804, 13.3545, 3.9, -28.0804, 30.3545, 3.9, -31.0804, 34.3545, 3.9, -27.0804, 40.3545, 3.9, -27.0804, 41.3545, 3.9, -29.0804, 34.3545, 3.9, -38.0804, 65.3545, 3.9, -39.0804, 57.3545, 3.9, -48.0804, 49.3545, 3.9, -48.0804, 34.3545, 3.9, -38.0804, 41.3545, 3.9, -29.0804, 53.3545, 3.9, -29.0804, 65.3545, 3.9, -39.0804, 65.3545, 3.9, -48.0804, 57.3545, 3.9, -48.0804, 41.3545, 3.9, -48.0804, 34.3545, 3.9, -48.0804, 34.3545, 3.9, -38.0804, 53.3545, 3.9, -29.0804, 65.3545, 3.9, -29.0804, 65.3545, 3.9, -39.0804, 49.3545, 3.9, -48.0804, 41.3545, 3.9, -48.0804, 34.3545, 3.9, -38.0804, -29.6455, 3.9, -26.0804, -35.6455, 3.9, -26.0804, -35.6455, 3.9, -19.0804, -36.6455, 3.9, -14.0804, -37.6455, 3.9, -3.08041, -34.6455, 3.9, -2.08041, -23.6455, 3.9, -2.08041, -5.64546, 3.9, -15.0804, -3.64546, 3.9, -16.0804, -3.64546, 3.9, -27.0804, -5.64546, 3.9, -29.0804, -29.6455, 3.9, -26.0804, -35.6455, 3.9, -19.0804, -36.6455, 3.9, -14.0804, -23.6455, 3.9, -27.0804, -5.64546, 3.9, -15.0804, -5.64546, 3.9, -29.0804, -23.6455, 3.9, -27.0804, -36.6455, 3.9, -14.0804, -23.6455, 3.9, -2.08041, -15.6455, 3.9, -3.08041, -15.6455, 3.9, -3.08041, -5.64546, 3.9, -3.08041, -5.64546, 3.9, -15.0804, -37.6455, 3.9, -3.08041, -36.6455, 3.9, -14.0804, -38.6455, 3.9, -15.0804, -44.6455, 3.9, -3.08041, -38.6455, 3.9, -15.0804, -38.6455, 3.9, -26.0804, -45.6455, 3.9, -26.0804, -65.6455, 3.9, -15.0804, -58.6455, 3.9, -3.08041, -51.6455, 3.9, -3.08041, -38.6455, 3.9, -15.0804, -50.6455, 3.9, -27.0804, -65.6455, 3.9, -27.0804, -65.6455, 3.9, -15.0804, -65.6455, 3.9, -3.08041, -58.6455, 3.9, -3.08041, -38.6455, 3.9, -15.0804, -45.6455, 3.9, -26.0804, -50.6455, 3.9, -27.0804, -51.6455, 3.9, -3.08041, -44.6455, 3.9, -3.08041, -38.6455, 3.9, -15.0804, 40.3545, 3.9, -27.0804, 34.3545, 3.9, -27.0804, 34.3545, 3.9, -20.0804, 34.3545, 3.9, -13.0804, 32.3545, 3.9, -12.0804, 32.3545, 3.9, -3.08041, 41.3545, 3.9, -3.08041, 65.3545, 3.9, -16.0804, 65.3545, 3.9, -26.0804, 58.3545, 3.9, -26.0804, 51.3545, 3.9, -3.08041, 65.3545, 3.9, -5.08041, 65.3545, 3.9, -16.0804, 45.3545, 3.9, -26.0804, 40.3545, 3.9, -27.0804, 34.3545, 3.9, -20.0804, 34.3545, 3.9, -13.0804, 65.3545, 3.9, -16.0804, 58.3545, 3.9, -26.0804, 52.3545, 3.9, -26.0804, 34.3545, 3.9, -13.0804, 41.3545, 3.9, -3.08041, 51.3545, 3.9, -3.08041, 65.3545, 3.9, -16.0804, 52.3545, 3.9, -26.0804, 45.3545, 3.9, -26.0804, 26.3545, 3.9, -0.0804138, 18.3545, 3.9, -0.0804138, 18.3545, 3.9, 7.91959, 26.3545, 3.9, 7.91959, 65.3545, 3.9, -5.08041, 51.3545, 3.9, -3.08041, 53.3545, 3.9, -2.08041, 35.3545, 3.9, -0.0804138, 26.3545, 3.9, -0.0804138, 26.3545, 3.9, 7.91959, 35.3545, 3.9, 7.91959, 65.3545, 3.9, 3.91959, 65.3545, 3.9, -5.08041, 53.3545, 3.9, -2.08041, 43.3545, 3.9, -0.0804138, 35.3545, 3.9, -0.0804138, 35.3545, 3.9, 7.91959, 43.3545, 3.9, 7.91959, 53.3545, 3.9, 10.9196, 51.3545, 3.9, 11.9196, 65.3545, 3.9, 13.9196, 52.3545, 3.9, -0.0804138, 43.3545, 3.9, -0.0804138, 43.3545, 3.9, 7.91959, 52.3545, 3.9, 7.91959, 52.3545, 3.9, 7.91959, 53.3545, 3.9, 10.9196, 65.3545, 3.9, 13.9196, 65.3545, 3.9, 3.91959, 53.3545, 3.9, -2.08041, 52.3545, 3.9, -0.0804138, -34.6455, 3.9, -2.08041, -37.6455, 3.9, -0.0804138, -37.6455, 3.9, 7.91959, -30.6455, 3.9, 7.91959, 11.3545, 3.9, 7.91959, 18.3545, 3.9, 7.91959, 18.3545, 3.9, -0.0804138, 10.3545, 3.9, -0.0804138, -22.6455, 3.9, -0.0804138, -23.6455, 3.9, 7.91959, -16.6455, 3.9, 7.91959, -12.6455, 3.9, -0.0804138, 4.35454, 3.9, 7.91959, 11.3545, 3.9, 7.91959, 10.3545, 3.9, -0.0804138, -16.6455, 3.9, 7.91959, -9.64546, 3.9, 7.91959, -12.6455, 3.9, -0.0804138, -2.64546, 3.9, 7.91959, 4.35454, 3.9, 7.91959, 10.3545, 3.9, -0.0804138, 9.35454, 3.9, -2.08041, -1.64546, 3.9, -2.08041, -2.64546, 3.9, -0.0804138, -23.6455, 3.9, 7.91959, -22.6455, 3.9, -0.0804138, -23.6455, 3.9, -2.08041, -34.6455, 3.9, -2.08041, -30.6455, 3.9, 7.91959, -9.64546, 3.9, 7.91959, -2.64546, 3.9, 7.91959, -2.64546, 3.9, -0.0804138, -12.6455, 3.9, -0.0804138, -38.6455, 3.9, 47.9196, -38.6455, 3.9, 39.9196, -40.6455, 3.9, 38.9196, -45.6455, 3.9, 47.9196, -40.6455, 3.9, 8.91959, -37.6455, 3.9, 7.91959, -37.6455, 3.9, -0.0804138, -44.6455, 3.9, -0.0804138, -51.6455, 3.9, -0.0804138, -58.6455, 3.9, -0.0804138, -65.6455, 3.9, 11.9196, -65.6455, 3.9, 23.9196, -40.6455, 3.9, 23.9196, -40.6455, 3.9, 15.9196, -65.6455, 3.9, 35.9196, -59.6455, 3.9, 47.9196, -52.6455, 3.9, 47.9196, -40.6455, 3.9, 30.9196, -40.6455, 3.9, 23.9196, -65.6455, 3.9, 23.9196, -65.6455, 3.9, 35.9196, -65.6455, 3.9, 47.9196, -59.6455, 3.9, 47.9196, -58.6455, 3.9, -0.0804138, -65.6455, 3.9, -0.0804138, -65.6455, 3.9, 11.9196, -40.6455, 3.9, 8.91959, -44.6455, 3.9, -0.0804138, -51.6455, 3.9, -0.0804138, -40.6455, 3.9, 15.9196, -52.6455, 3.9, 47.9196, -45.6455, 3.9, 47.9196, -40.6455, 3.9, 38.9196, -40.6455, 3.9, 30.9196, -28.6455, 3.9, 11.9196, -37.6455, 3.9, 11.9196, -37.6455, 3.9, 18.9196, -38.6455, 3.9, 39.9196, -38.6455, 3.9, 47.9196, -29.6455, 3.9, 47.9196, -37.6455, 3.9, 33.9196, -9.64546, 3.9, 47.9196, 0.354538, 3.9, 47.9196, 0.354538, 3.9, 40.9196, 1.35454, 3.9, 22.9196, 1.35454, 3.9, 11.9196, -8.64546, 3.9, 11.9196, 0.354538, 3.9, 28.9196, -37.6455, 3.9, 26.9196, -37.6455, 3.9, 33.9196, -29.6455, 3.9, 47.9196, -9.64546, 3.9, 47.9196, 0.354538, 3.9, 40.9196, 0.354538, 3.9, 34.9196, -28.6455, 3.9, 11.9196, -37.6455, 3.9, 18.9196, -37.6455, 3.9, 26.9196, -18.6455, 3.9, 11.9196, 0.354538, 3.9, 28.9196, -8.64546, 3.9, 11.9196, -18.6455, 3.9, 11.9196, -37.6455, 3.9, 26.9196, -29.6455, 3.9, 47.9196, -19.6455, 3.9, 47.9196, -9.64546, 3.9, 47.9196, 0.354538, 3.9, 34.9196, 0.354538, 3.9, 28.9196, -19.6455, 3.9, 47.9196, 1.35454, 3.9, 11.9196, 1.35454, 3.9, 22.9196, 3.35454, 3.9, 23.9196, 8.35454, 3.9, 11.9196, 30.3545, 3.9, 22.9196, 22.3545, 3.9, 11.9196, 15.3545, 3.9, 11.9196, 32.3545, 3.9, 47.9196, 32.3545, 3.9, 35.9196, 30.3545, 3.9, 34.9196, 24.3545, 3.9, 47.9196, 30.3545, 3.9, 22.9196, 30.3545, 3.9, 11.9196, 22.3545, 3.9, 11.9196, 3.35454, 3.9, 35.9196, 3.35454, 3.9, 47.9196, 10.3545, 3.9, 47.9196, 15.3545, 3.9, 11.9196, 3.35454, 3.9, 23.9196, 3.35454, 3.9, 35.9196, 17.3545, 3.9, 47.9196, 30.3545, 3.9, 34.9196, 30.3545, 3.9, 22.9196, 15.3545, 3.9, 11.9196, 8.35454, 3.9, 11.9196, 3.35454, 3.9, 23.9196, 17.3545, 3.9, 47.9196, 24.3545, 3.9, 47.9196, 30.3545, 3.9, 34.9196, 3.35454, 3.9, 35.9196, 10.3545, 3.9, 47.9196, 17.3545, 3.9, 47.9196, 42.3545, 3.9, 11.9196, 33.3545, 3.9, 11.9196, 33.3545, 3.9, 17.9196, 56.3545, 3.9, 47.9196, 65.3545, 3.9, 47.9196, 65.3545, 3.9, 38.9196, 32.3545, 3.9, 35.9196, 32.3545, 3.9, 47.9196, 40.3545, 3.9, 47.9196, 42.3545, 3.9, 11.9196, 33.3545, 3.9, 17.9196, 33.3545, 3.9, 24.9196, 51.3545, 3.9, 11.9196, 65.3545, 3.9, 21.9196, 65.3545, 3.9, 13.9196, 51.3545, 3.9, 11.9196, 48.3545, 3.9, 47.9196, 56.3545, 3.9, 47.9196, 65.3545, 3.9, 38.9196, 32.3545, 3.9, 35.9196, 40.3545, 3.9, 47.9196, 48.3545, 3.9, 47.9196, 48.3545, 3.9, 47.9196, 65.3545, 3.9, 38.9196, 65.3545, 3.9, 30.9196, 51.3545, 3.9, 11.9196, 33.3545, 3.9, 24.9196, 32.3545, 3.9, 35.9196, 65.3545, 3.9, 30.9196, 65.3545, 3.9, 21.9196, 51.3545, 3.9, 11.9196 )
polygons = [ PoolIntArray( 1, 0, 2 ), PoolIntArray( 2, 0, 3 ), PoolIntArray( 5, 4, 6 ), PoolIntArray( 6, 4, 7 ), PoolIntArray( 7, 4, 8 ), PoolIntArray( 8, 4, 9 ), PoolIntArray( 12, 11, 10 ), PoolIntArray( 15, 14, 13 ), PoolIntArray( 18, 17, 16 ), PoolIntArray( 21, 20, 19 ), PoolIntArray( 23, 22, 24 ), PoolIntArray( 24, 22, 25 ), PoolIntArray( 28, 27, 26 ), PoolIntArray( 31, 30, 29 ), PoolIntArray( 34, 33, 32 ), PoolIntArray( 37, 36, 35 ), PoolIntArray( 39, 38, 40 ), PoolIntArray( 40, 38, 41 ), PoolIntArray( 41, 38, 43 ), PoolIntArray( 41, 43, 42 ), PoolIntArray( 45, 44, 46 ), PoolIntArray( 46, 44, 47 ), PoolIntArray( 50, 49, 48 ), PoolIntArray( 52, 51, 53 ), PoolIntArray( 53, 51, 54 ), PoolIntArray( 57, 56, 55 ), PoolIntArray( 60, 59, 58 ), PoolIntArray( 63, 62, 61 ), PoolIntArray( 65, 64, 66 ), PoolIntArray( 66, 64, 67 ), PoolIntArray( 70, 69, 71 ), PoolIntArray( 71, 69, 68 ), PoolIntArray( 73, 72, 74 ), PoolIntArray( 74, 72, 75 ), PoolIntArray( 77, 76, 78 ), PoolIntArray( 78, 76, 81 ), PoolIntArray( 78, 81, 79 ), PoolIntArray( 79, 81, 80 ), PoolIntArray( 82, 86, 83 ), PoolIntArray( 83, 86, 84 ), PoolIntArray( 84, 86, 85 ), PoolIntArray( 88, 87, 89 ), PoolIntArray( 89, 87, 90 ), PoolIntArray( 92, 91, 93 ), PoolIntArray( 93, 91, 96 ), PoolIntArray( 93, 96, 95 ), PoolIntArray( 93, 95, 94 ), PoolIntArray( 99, 98, 97 ), PoolIntArray( 102, 101, 100 ), PoolIntArray( 105, 104, 103 ), PoolIntArray( 108, 107, 106 ), PoolIntArray( 111, 110, 109 ), PoolIntArray( 113, 112, 114 ), PoolIntArray( 114, 112, 115 ), PoolIntArray( 117, 116, 118 ), PoolIntArray( 118, 116, 119 ), PoolIntArray( 121, 120, 122 ), PoolIntArray( 122, 120, 123 ), PoolIntArray( 129, 128, 124 ), PoolIntArray( 124, 128, 125 ), PoolIntArray( 125, 128, 126 ), PoolIntArray( 126, 128, 127 ), PoolIntArray( 132, 131, 130 ), PoolIntArray( 134, 133, 135 ), PoolIntArray( 135, 133, 136 ), PoolIntArray( 139, 138, 137 ), PoolIntArray( 141, 140, 142 ), PoolIntArray( 142, 140, 145 ), PoolIntArray( 142, 145, 144 ), PoolIntArray( 142, 144, 143 ), PoolIntArray( 148, 147, 146 ), PoolIntArray( 151, 150, 149 ), PoolIntArray( 154, 153, 152 ), PoolIntArray( 157, 156, 155 ), PoolIntArray( 159, 158, 160 ), PoolIntArray( 160, 158, 161 ), PoolIntArray( 164, 163, 162 ), PoolIntArray( 167, 166, 165 ), PoolIntArray( 169, 168, 170 ), PoolIntArray( 170, 168, 171 ), PoolIntArray( 173, 172, 174 ), PoolIntArray( 176, 175, 177 ), PoolIntArray( 177, 175, 180 ), PoolIntArray( 177, 180, 179 ), PoolIntArray( 177, 179, 178 ), PoolIntArray( 184, 183, 181 ), PoolIntArray( 181, 183, 182 ), PoolIntArray( 187, 186, 185 ), PoolIntArray( 191, 190, 188 ), PoolIntArray( 188, 190, 189 ), PoolIntArray( 194, 193, 192 ), PoolIntArray( 198, 197, 195 ), PoolIntArray( 195, 197, 196 ), PoolIntArray( 201, 200, 199 ), PoolIntArray( 205, 204, 202 ), PoolIntArray( 202, 204, 203 ), PoolIntArray( 211, 210, 206 ), PoolIntArray( 206, 210, 207 ), PoolIntArray( 207, 210, 209 ), PoolIntArray( 207, 209, 208 ), PoolIntArray( 213, 212, 214 ), PoolIntArray( 214, 212, 215 ), PoolIntArray( 217, 216, 218 ), PoolIntArray( 218, 216, 219 ), PoolIntArray( 221, 220, 222 ), PoolIntArray( 222, 220, 223 ), PoolIntArray( 226, 225, 224 ), PoolIntArray( 229, 228, 227 ), PoolIntArray( 235, 234, 230 ), PoolIntArray( 230, 234, 231 ), PoolIntArray( 231, 234, 232 ), PoolIntArray( 232, 234, 233 ), PoolIntArray( 237, 236, 238 ), PoolIntArray( 238, 236, 240 ), PoolIntArray( 238, 240, 239 ), PoolIntArray( 242, 241, 243 ), PoolIntArray( 243, 241, 244 ), PoolIntArray( 246, 245, 247 ), PoolIntArray( 247, 245, 248 ), PoolIntArray( 250, 249, 251 ), PoolIntArray( 251, 249, 252 ), PoolIntArray( 254, 253, 255 ), PoolIntArray( 255, 253, 256 ), PoolIntArray( 256, 253, 258 ), PoolIntArray( 256, 258, 257 ), PoolIntArray( 260, 259, 261 ), PoolIntArray( 261, 259, 264 ), PoolIntArray( 261, 264, 262 ), PoolIntArray( 262, 264, 263 ), PoolIntArray( 267, 266, 265 ), PoolIntArray( 270, 269, 268 ), PoolIntArray( 272, 271, 273 ), PoolIntArray( 273, 271, 274 ), PoolIntArray( 276, 275, 277 ), PoolIntArray( 277, 275, 278 ), PoolIntArray( 281, 280, 279 ), PoolIntArray( 282, 285, 283 ), PoolIntArray( 283, 285, 284 ), PoolIntArray( 288, 287, 286 ), PoolIntArray( 289, 292, 290 ), PoolIntArray( 290, 292, 291 ), PoolIntArray( 295, 294, 293 ), PoolIntArray( 297, 296, 298 ), PoolIntArray( 300, 299, 301 ), PoolIntArray( 301, 299, 302 ), PoolIntArray( 304, 303, 305 ), PoolIntArray( 305, 303, 306 ), PoolIntArray( 306, 303, 308 ), PoolIntArray( 306, 308, 307 ), PoolIntArray( 310, 309, 311 ), PoolIntArray( 311, 309, 312 ), PoolIntArray( 314, 313, 315 ), PoolIntArray( 315, 313, 316 ), PoolIntArray( 319, 318, 317 ), PoolIntArray( 321, 320, 322 ), PoolIntArray( 322, 320, 323 ), PoolIntArray( 326, 325, 324 ), PoolIntArray( 329, 328, 327 ), PoolIntArray( 331, 330, 332 ), PoolIntArray( 332, 330, 335 ), PoolIntArray( 332, 335, 334 ), PoolIntArray( 332, 334, 333 ), PoolIntArray( 338, 337, 336 ), PoolIntArray( 341, 340, 339 ), PoolIntArray( 344, 343, 342 ), PoolIntArray( 347, 346, 345 ), PoolIntArray( 350, 349, 348 ), PoolIntArray( 353, 352, 351 ), PoolIntArray( 355, 354, 356 ), PoolIntArray( 356, 354, 357 ), PoolIntArray( 360, 359, 358 ), PoolIntArray( 363, 362, 361 ), PoolIntArray( 366, 365, 364 ), PoolIntArray( 368, 367, 369 ), PoolIntArray( 369, 367, 372 ), PoolIntArray( 369, 372, 371 ), PoolIntArray( 369, 371, 370 ), PoolIntArray( 375, 374, 373 ) ]
cell/size = 1.0
cell/height = 1.5
agent/height = 3.0
agent/radius = 1.0

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( 30, 10, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 3.38871, 18 )

[node name="Navigation" type="Navigation" parent="."]

[node name="Enemy" parent="Navigation" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19, 3.38871, -40.3733 )

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Navigation/NavigationMeshInstance"]
transform = Transform( 66.6455, 0, 0, 0, 0.1, 0, 0, 0, 49.0804, 0, 1, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Wall" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( 0.282492, 0, 0, 0, 5.54037, 0, 0, 0, 6.69042, -3.93603, 6.61918, -7.99953 )

[node name="Wall6" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( 0.282492, 0, 0, 0, 5.54037, 0, 0, 0, 10.0399, -3.834, 6.61918, -38.7632 )

[node name="Wall9" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( 0.282492, 0, 0, 0, 5.54037, 0, 0, 0, 10.0399, 11.4008, 6.61918, -38.9425 )

[node name="Wall10" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( 0.282492, 0, 0, 0, 5.54037, 0, 0, 0, 17.5325, 32.0844, 6.61918, -30.9094 )

[node name="Wall2" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( -8.37812e-08, 0, -45.3941, 0, 5.54037, 0, 0.282492, 0, -2.92447e-07, 6.25676, 6.61918, 9.97052 )

[node name="Wall3" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( -1.71851e-08, 0, -9.31119, 0, 5.54037, 0, 0.282492, 0, -2.92447e-07, -12.9301, 6.61918, -1.47955 )

[node name="Wall5" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( -2.80116e-08, 0, -15.1772, 0, 5.54037, 0, 0.282492, 0, -2.92447e-07, -51.2523, 6.61918, -1.47955 )

[node name="Wall7" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( -3.73141e-08, 0, -20.2174, 0, 5.54037, 0, 0.282492, 0, -2.92447e-07, 31.5639, 6.61918, -1.4689 )

[node name="Wall11" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( -2.25276e-08, 0, -12.2059, 0, 5.54037, 0, 0.282492, 0, -2.92447e-07, 54.1326, 6.61918, -27.6107 )

[node name="Wall12" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( -2.25276e-08, 0, -12.2059, 0, 5.54037, 0, 0.282492, 0, -2.92447e-07, -37.2009, 6.61918, -27.6107 )

[node name="Wall13" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( 0.282492, 0, 0, 0, 5.54037, 0, 0, 0, 12.2059, -37.2009, 6.61918, -27.6107 )

[node name="Wall14" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( 0.282492, 0, 0, 0, 5.54037, 0, 0, 0, 12.2059, 31.6924, 6.61918, 22.1194 )

[node name="Wall15" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( 0.282492, 0, 0, 0, 5.54037, 0, 0, 0, 12.2059, 1.66685, 6.61918, 36.6797 )

[node name="Wall4" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 4 )]
transform = Transform( 0.282492, 0, 0, 0, 5.54037, 0, 0, 0, 14.2073, -39.0942, 6.61918, 24.3708 )

[node name="PatrolLoc" type="Spatial" parent="."]

[node name="Loc1" type="Spatial" parent="PatrolLoc"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -55.921, 2.60362, 36.3232 )

[node name="Loc4" type="Spatial" parent="PatrolLoc"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50.0568, 2.60362, 36.3232 )

[node name="Loc2" type="Spatial" parent="PatrolLoc"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 54.442, 2.65798, -42.9482 )

[node name="Loc3" type="Spatial" parent="PatrolLoc"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -50.1269, 2.60362, -37.9982 )

[node name="Page" parent="." instance=ExtResource( 6 )]
transform = Transform( 1.4914, 0, 0, 0, 2, 0, 0, 0, 2, -2.60563, 1.3317, 14.7188 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[connection signal="destination_reached" from="Navigation/Enemy" to="." method="_on_Enemy_destination_reached"]
